--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "eslint-config-next": "^14.0.4",
-    "framer-motion": "^6.2.8",
+    "framer-motion": "^11.2.4",
     "graphql": "^16.6.0",
     "immer": "^9.0.12",
     "lucide-react": "^0.323.0",
@@ -25,6 +25,7 @@
     "pino-pretty": "^10.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.4",
     "react-icons": "^4.3.1",
     "swr": "^2.2.4",
     "tailwind-merge": "^1.10.0",
