--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@privy-io/react-auth": "^1.59.5",
     "@privy-io/wagmi": "^0.2.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.17.10",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.1.3",
     "eslint-config-next": "^14.0.4",
     "framer-motion": "^11.2.4",
     "graphql": "^16.6.0",
@@ -26,7 +28,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
+    "react-grid-layout": "^1.4.4",
     "react-icons": "^4.3.1",
+    "react-resizable": "^3.0.5",
     "swr": "^2.2.4",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-animate": "^1.0.7",
@@ -37,6 +41,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/react-grid-layout": "^1.3.5",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "@wagmi/cli": "^1.0.1",
