--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-safe-action": "6.2.0",
     "pino-pretty": "^10.2.3",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-grid-layout": "^1.4.4",
