--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "eslint": "^8.56.0",
     "eslint-plugin-tailwindcss": "^3.8.0",
     "postcss": "^8.4.12",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.3.1"
   }
 }
