--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^11.2.4",
     "graphql": "^16.6.0",
     "immer": "^9.0.12",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.323.0",
     "next": "^14.2.3",
     "next-safe-action": "6.2.0",
