--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@privy-io/wagmi": "^0.2.1",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/supabase-js": "^2.44.4",
     "@tanstack/react-query": "^5.17.10",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
