--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "next build",
+    "build": "basehub && next build",
     "start": "next start"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.17.10",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
+    "basehub": "^7.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.1.3",
