--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@privy-io/react-auth": "^1.59.5",
     "@privy-io/wagmi": "^0.2.1",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.44.4",
