--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "basehub": "^7.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dnum": "^2.13.1",
     "embla-carousel-react": "^8.1.3",
     "eslint-config-next": "^14.0.4",
     "framer-motion": "^11.2.4",
