--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@0xhoneyjar/validator-widget": "^1.0.36",
     "@openpanel/nextjs": "0.0.10-beta",
     "@privy-io/react-auth": "^1.59.5",
     "@privy-io/wagmi": "^0.2.1",
@@ -17,9 +18,10 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.44.4",
-    "@tanstack/react-query": "^5.17.10",
+    "@tanstack/react-query": "^5.55.4",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
+    "@web3modal/wagmi": "^5.1.6",
     "basehub": "^7.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -41,12 +43,13 @@
     "react-grid-layout": "^1.4.4",
     "react-icons": "^4.3.1",
     "react-resizable": "^3.0.5",
+    "react-spinners": "^0.14.1",
     "swr": "^2.2.4",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.1.6",
+    "typescript": "^5.6.2",
     "viem": "^2.10.9",
-    "wagmi": "^2.9.2",
+    "wagmi": "2.12.9",
     "zod": "^3.23.8",
     "zustand": "^4.4.7"
   },
