--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.44.4",
     "@tanstack/react-query": "^5.55.4",
+    "@thehoneyjar/sdk": "^0.1.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@web3modal/wagmi": "^5.1.6",
