--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@0xhoneyjar/validator-widget": "^1.0.54",
+    "@apollo/client": "^3.11.10",
     "@openpanel/nextjs": "0.0.10-beta",
     "@privy-io/react-auth": "^1.59.5",
     "@privy-io/wagmi": "^0.2.1",
