--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.8",
     "@0xhoneyjar/validator-widget": "^1.0.54",
     "@apollo/client": "^3.11.10",
     "@openpanel/nextjs": "0.0.10-beta",
@@ -46,6 +45,7 @@
     "react-grid-layout": "^1.5.0",
     "react-icons": "^4.12.0",
     "react-resizable": "^3.0.5",
+    "react-snowfall": "^2.2.0",
     "react-spinners": "^0.14.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^1.14.0",
