--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@privy-io/react-auth": "^1.92.2",
     "@privy-io/wagmi": "^0.2.12",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
