feat: Implement CRITICAL-007 - Blog Publishing Security (Manual Draft Workflow)
Implements manual draft workflow for blog publishing to prevent irreversible
exposure of internal technical details, secrets, and sensitive information to
the public internet.

ATTACK SCENARIO PREVENTED:
Engineer includes Stripe production key in architecture doc → AI summarizes for
blog post, includes key in summary → auto-publishing posts to blog → key exposed
to public internet → attacker discovers key → charges $100k to company card →
IRREVERSIBLE: cannot unpublish from blog, key compromised forever

SOLUTION: MANUAL DRAFT WORKFLOW
System generates drafts → Team manually reviews → Team manually publishes
Auto-publishing PERMANENTLY DISABLED

COMPONENTS:

1. Blog Draft Generator (src/services/blog-draft-generator.ts)
   - Generates blog post drafts from source documents
   - Automatic secret scanning before draft creation (CRITICAL-005 integration)
   - Automatic secret redaction with [REDACTED: TYPE] markers
   - Sensitive content flagging (internal URLs, emails, amounts, IPs)
   - 17-point redaction checklist generation
   - Status tracking: draft → ready_for_review → approved/rejected → published
   - Manual review and approval workflow
   - Final secret scan before publishing (double-check)
   - Pre-distribution validation (CRITICAL-005 integration)
   - Security exception blocking (publishing fails if secrets detected)
   - Comprehensive audit trail

2. Manual Publishing Workflow (docs/BLOG-PUBLISHING-WORKFLOW.md)
   - Complete guide with security model and best practices
   - Step-by-step workflow documentation
   - Code examples for all operations
   - Redaction checklist (17 items in 4 categories)
   - Troubleshooting and security notes
   - Integration examples

3. RBAC Configuration (config/rbac-config.yaml)
   - Confirmed auto_publish: false (hardcoded)
   - Confirmed blog enabled: false (default)
   - Updated comments to reflect CRITICAL-007 completion
   - Documented manu

--- a/integration/config/rbac-config.yaml
+++ b/integration/config/rbac-config.yaml
@@ -31,11 +31,13 @@ review_workflow:
 
 distribution:
   blog:
-    # Blog publishing disabled by default (CRITICAL-007)
-    # DO NOT enable without completing CRITICAL-007 remediation
+    # Blog publishing uses manual draft workflow (CRITICAL-007 COMPLETE)
+    # System generates drafts → Team manually reviews → Team manually publishes
+    # Auto-publishing PERMANENTLY DISABLED for security
     enabled: false
 
     # NEVER set to true - auto-publishing is a security risk
+    # All blog posts must go through draft → review → publish workflow
     auto_publish: false
 
     # Explicit list of Discord user IDs authorized to publish to blog
